--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "koa": "^2.13.4",
     "npm": "^8.1.3"
   },
   "scripts": {
-    "start": "reload -bv -d ./src"
+    "start": "nodemon run -p 3000"
   }
 }
