--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "npm": "^8.1.3"
   },
   "scripts": {
-    "start": "reload -bd ./src -s player.html run -p 3000",
-    "start2": "nodemon  run -p 3000"
+    "front": "reload -bd ./src -s player.html -p 8000",
+    "back": "nodemon"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
