--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/koa": "^2.13.4",
     "koa": "^2.13.4",
     "koa-jwt": "^4.0.3",
-    "npm": "^8.1.3"
+    "npm": "^8.1.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "front": "reload -bd ./src -s player.html -p 8000",
