--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-scripts": "^4.0.3",
+    "rsuite": "^5.2.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
