clean fini, inline block (tailwindcss) sur le lecteur, suppressions react icones, ajout des premiers images

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": "^8.1.4"
   },
   "scripts": {
-    "back": "nodemon"
+    "start": "nodemon"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
