ok pour pupeteers mais a debug partie serveur

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "7": "^0.0.1",
     "@types/koa": "^2.13.4",
     "koa": "^2.13.4",
-    "koa-jwt": "^4.0.3",
-    "npm": "^8.1.4"
+    "koa-jwt": "^4.0.3"
   },
   "scripts": {
     "start": "nodemon"
