--- a/front/package.json
+++ b/front/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-numeric-input": "^2.2.3",
     "react-player": "^2.9.0",
     "react-scripts": "^4.0.3",
     "rsuite": "^5.2.3",
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.2",
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
